Added in header fonts

--- a/About.html
+++ b/About.html
@@ -16,6 +16,7 @@
     <!--Our Stylesheets-->
     <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
     <link href="./stylesheets/aboutstylesheet.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chicle|Lobster" rel="stylesheet">
 </head>
 <!--Navbar-->
 
@@ -64,7 +65,7 @@
         <div class="row info_1">
             <div class="col-lg-12 rounded border">
                 <article>
-                    <h4>Hannah</h4>
+                    <h4 id="HannahHeader">Hannah</h4>
                     <img class="rounded-circle img-fluid img-thumbnail" src="img/hannah%20(1).jpg" alt="Hannah">
 					<p>Hello World! I’m Hannah – a 20 year old student from Bath University.</p>
 					<p>I have been a Pescatarian since the age of six. In 2017, I tried to transition to a Veganism, a.k.a my ‘Seagan’ phase.</p>
@@ -75,7 +76,7 @@
             </div>
             <div class="col-lg-12 rounded border">
                 <article>
-                    <h4>Michelle</h4>
+                    <h4 id="MichelleHeader">Michelle</h4>
                     <img class="rounded-circle img-fluid img-thumbnail" src="img/Mich.jpg" alt="Michelle">
                     <p>Heya I'm Michi and I'm one of the websites' creators. Though I am not vegetarian or a vegan, my favourite vegan thing to eat are falafel wraps with lots of salad. About 2 months ago I didn’t know a thing about creating websites, but I’m really glad I signed up to <a href="https://www.codefirstgirls.org.uk/free-community-courses.html">CodeFirst:Girls</a>. I think coding is a skill that anyone can learn if they persist at it, regardless of their age, sex or level of education.</p>
                     <p>Making this website has made me very hungry, I’m going to get a snack. Say catch to me on <a href="https://twitter.com/Michi__404">Twitter</a>! Tschüss x</p>
@@ -83,7 +84,7 @@
             </div>
             <div class="col-lg-12 rounded border">
                 <article>
-                    <h4>Seraphina</h4>
+                    <h4 id="SeraphinaHeader">Seraphina</h4>
                     <img class="rounded-circle img-fluid img-thumbnail" src="img/Seraphina.png" alt="Seraphina">
                     <p> Hello I'm Seraphina, I have been vegetarian my whole life and I have experimented with Veganism. I love Asian food including sushi, bao and ramen! I also love to watch movies and can always recommend a good film! Netflix has some great documentaries including; 'Cowspiracy', 'What the Health' and 'Forks over Knives',you should check out them out if you want to learn more about Veganism. </p>
                     <p> I am excited to learn more coding skills and to develop my abilities and add more to the website and build more exciting things! </p>
